# GmailAutomater

./: README.md  docker-compose.yml  pyproject.toml
sqlite-db/: Dockerfile
sqlite-db/data/: gmail.db  gmail.sql
src/gmailautomater/: Dockerfile  __main__.py  app.py  organize.py  utils.py
src/gmailautomater/cli/: email.py
src/gmailautomater/email_utils/: deletion.py  labels.py  login.py  mail.py  utils.py
src/gmailautomater/mail/: Email.py  Label.py
src/gmailautomater/sqlite/: DatabaseFunctions.py
